--- a/css/widescreen.css
+++ b/css/widescreen.css
@@ -17,10 +17,3 @@
 #contact .map {
     flex: 2
 }
-
-
-/* @media(max-width:640px) {
-    #showcase .showcase-content {
-        top: 100px;
-    }
-} */
